# pindl

./: .gitignore  README.md  auth.py  client.py  downloader.py  gui.py  main.py  pyproject.toml
.github/workflows/: build.yml
pindl-uxp/: .gitignore  README.md  build.sh  index.html  manifest.json
pindl-uxp/src/: client.js  downloader.js  main.js  premiere.js
