[project]
name = "pindl"
version = "0.1.0"
description = "Bulk-download your Pinterest videos"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx[http2]>=0.27",
    "browser-cookie3>=0.19",
    "rich>=13",
    "click>=8",
]

[project.scripts]
pindl = "main:main"

[dependency-groups]
dev = ["pyinstaller>=6"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main", "auth", "client", "downloader", "gui"]
